--- a/SimpleLeaveManagement.Web/Views/_ViewImports.cshtml
+++ b/SimpleLeaveManagement.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using SimpleLeaveManagement.Web
 @using SimpleLeaveManagement.Web.Models
+@using SimpleLeaveManagement.Web.Data
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
