--- a/SimpleLeaveManagement.Web/Views/Shared/_Layout.cshtml
+++ b/SimpleLeaveManagement.Web/Views/Shared/_Layout.cshtml
@@ -24,7 +24,21 @@
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="" asp-action="">Apply For Leave</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="" asp-action="">My Leave</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Leave Management
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" asp-controller="LeaveTypes" asp-action="Index">Leave Types</a></li>
+                            <li><a class="dropdown-item" href="#">Leave Allocations</a></li>
+                            <li><a class="dropdown-item" href="#">Leave Requests</a></li>
+                            <li><a class="dropdown-item" href="#">Employee Management</a></li>
+                        </ul>
                     </li>
                 </ul>
                 <partial name="_LoginPartial"/>
@@ -40,7 +54,7 @@
 
 <footer class="border-top footer text-muted">
     <div class="container">
-        &copy; 2022 - SimpleLeaveManagement.Web - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        &copy; @DateTime.Now.Year - Simple Leave Management - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
     </div>
 </footer>
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
