--- a/SimpleLeaveManagement.Web/Views/LeaveTypes/Index.cshtml
+++ b/SimpleLeaveManagement.Web/Views/LeaveTypes/Index.cshtml
@@ -31,7 +31,8 @@
                 @Html.DisplayFor(modelItem => item.DefaultDays)
             </td>
             <td>
-                <a class="btn btn-warning" asp-action="Edit" asp-route-id="@item.Id"><i class="fas fa-pencil-alt"></i></a> 
+                <button data-id="@item.Id" class="btn btn-primary allocateBtn" type="button"> Allocate Leave </button>
+                <a class="btn btn-warning" asp-action="Edit" asp-route-id="@item.Id"><i class="fas fa-pencil-alt"></i></a>
                 <a class="btn btn-info" asp-action="Details" asp-route-id="@item.Id"><i class="fas fa-info-circle"></i></a>
                 <button data-id="@item.Id" class="btn btn-danger deleteBtn" type="button"><i class="far fa-trash-alt"></i></button>
             </td>
@@ -41,6 +42,10 @@
 </table>
 <form id="deleteFrom" asp-action="Delete">
     <input type="hidden" id="leaveTypeId" name="Id"/>
+</form>
+
+<form id="allocationForm" asp-action="AllocateLeave">
+    <input type="hidden" id="leaveTypeIdAllocate" name="Id"/>
 </form>
 
 @section Scripts{
@@ -60,6 +65,22 @@
                             var id = btn.data("id");
                             $('#leaveTypeId').val(id);
                             $('#deleteFrom').submit();
+                        }
+                    });
+            });
+            $('.allocateBtn').click(function(e) {
+                swal({
+                    title: "Are you sure?",
+                    text: "Are you sure you want to allocation this leave to all employees?",
+                    icon: "warning",
+                    buttons: true,
+                    dangerMode: true
+                }).then((confirm) => {
+                        if(confirm){
+                            var btn = $(this);
+                            var id = btn.data("id");
+                            $('#leaveTypeIdAllocate').val(id);
+                            $('#allocationForm').submit();
                         }
                     });
             });
